<resources>
    <string name="app_name">Practica5</string>
    <string name="stOrdenar">ordenar</string>
    <string name="stValoraVida">Valora Vida</string>
    <string name="stMostrarEntreFechas">Mostrar entre fechas</string>
    <string name="stConfigurar">Configurar</string>
    <string name="stAcercaDe">Acerca de...</string>
    <string name="stAsc">Asc</string>
    <string name="stDesc">Desc</string>
    <string name="stTextoHintResumenBreve">Resumen breve del día</string>
    <string name="stValorarVida">Valorar Vida</string>
    <string name="stHintDiario">Cuenta a tu diario tu día</string>

    <string-array name="valoracion">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="action_ordenar">
        <item>Fecha</item>
        <item>Valoración</item>
        <item>Resumen</item>
    </string-array>
    <string name="stAlerta">Alerta</string>
    <string name="stMensajeAlertDialog">Es necesario rellenar todos los campos</string>
    <string name="stNuevaTarea">Nueva Tarea</string>
    <string name="stTarea">Tarea</string>
    <string name="stAviso">Aviso</string>
    <string name="stAvisoMensaje">Realmente desea eliminar la tarea con id</string>
    <string name="preference_file">preferencias</string>
    <string name="pref_key_ultimo_dia">pref_ultimo_dia</string>
    <string name="stDialogo"><![CDATA[ Práctica 5\nV 1.0\nJoel Sempere Durá\nLicencia cc\n(Creative Commons)]]></string>
    <string name="stUltimoDia">Último Día</string>
    <string name="title_activity_preferencias">PreferenciasActivity</string>

    <string name="stDatosPersonales">Datos Personales</string>
    <string name="stConfPrograma">Configuración Programa</string>
    <string name="stPreguntaNombre">Cuál es tu nombre</string>
    <string name="stFechaCumple">Fecha Cumpleaños</string>
    <string name="stComoTeLlamamos">Con que nombre quieres que nos dirijamos a ti</string>
    <string name="stPreguntaGenero">Eres...</string>
    <string name="stPreguntaGeneroDescripcion">Eres un/una...</string>
    <string name="stAvisarEscribir">Avisar escribir en Diario</string>
    <string name="stAvisarEscribirDescripcion">Desea que le avisemos que tiene que escribir en el diario</string>
    <string name="stSeleccioneImagen">Seleccione una imagen</string>
    <string name="stTomarFoto">Tomar foto</string>
    <string name="stElegirGaleria">Elegir de la galería</string>
    <string name="stPedirPermisos">Necesito los permisos para poder elegir una foto</string>
    <string name="stPeticionPermisos">Petición de Permisos</string>
    <string name="stRequerirPermisos">Necesito los permisos para seleccionar una foto</string>
    <string name="stPermisosAceptados">Permisos aceptados</string>
</resources>