<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/stDatosPersonales">
        <EditTextPreference
            android:defaultValue="true"
            android:key="nombre"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/stComoTeLlamamos"
            android:title="@string/stPreguntaNombre" />
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="cumpleaños"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/stFechaCumple"
            android:title="@string/stFechaCumple" />
        <ListPreference
            android:summary="@string/stPreguntaGeneroDescripcion"
            app:defaultValue="3"
            app:entries="@array/genero_entries"
            app:entryValues="@array/genero_values"
            app:key="genero"
            app:title="@string/stPreguntaGenero"
            app:useSimpleSummaryProvider="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/stConfPrograma"/>
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@android:drawable/ic_popup_reminder"
        android:key="avisar"
        android:summary="@string/stAvisarEscribirDescripcion"
        android:title="@string/stAvisarEscribir" />

</PreferenceScreen>