<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/Theme.Practica5.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layoutDirection="rtl"
            android:textAlignment="textEnd"
            app:popupTheme="@style/Theme.Practica5.PopupOverlay">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autoText="false"
                android:layoutDirection="ltr"
                app:icon="@android:drawable/ic_menu_save"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/btnImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:layoutDirection="ltr"
                app:icon="@android:drawable/ic_menu_gallery"
                app:iconPadding="0dp" />


        </androidx.appcompat.widget.Toolbar>




    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="150dp"
            app:layout_constraintBottom_toTopOf="@+id/btnFecha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toTopOf="@+id/etResumenBreve"
            app:layout_constraintEnd_toStartOf="@+id/btnFecha"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="14/10/2018" />

        <Button
            android:id="@+id/btnFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#00FFFFFF"
            app:icon="@android:drawable/ic_menu_month"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tvFecha"
            app:layout_constraintStart_toEndOf="@+id/tvFecha"
            app:layout_constraintTop_toTopOf="@+id/tvFecha"
            app:rippleColor="#00FFFFFF" />

        <EditText
            android:id="@+id/etResumenBreve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/stTextoHintResumenBreve"
            android:inputType="textMultiLine|textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/ivImagenDia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFecha" />

        <Spinner
            android:id="@+id/spValoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvValoraVida"
            app:layout_constraintStart_toEndOf="@+id/tvValoraVida"
            app:layout_constraintTop_toTopOf="@+id/tvValoraVida" />

        <TextView
            android:id="@+id/tvValoraVida"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/stValorarVida"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etResumenBreve" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spValoracion">

            <EditText
                android:id="@+id/etDiarioTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/stHintDiario"
                android:inputType="textMultiLine" />
        </ScrollView>

        <ImageView
            android:id="@+id/ivImagenDia"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etResumenBreve"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>